samples/_failures_safe/1761442928_d0fca1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_273300f5.c: In function ‘main’:
./samples/SAFE/__tmp_273300f5.c:158:5: error: expected expression at end of input
  158 |     add_matrices(&
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_273300f5.c:158:5: error: too few arguments to function ‘add_matrices’
./samples/SAFE/__tmp_273300f5.c:73:6: note: declared here
   73 | void add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_273300f5.c:158:5: error: expected declaration or statement at end of input
  158 |     add_matrices(&
      |     ^~~~~~~~~~~~
